<resources>
    <string name="app_name">Snaptask-v0.1</string>
    <string name="snaptask">SnapTask</string>
    <string name="SnapTask">SnapTask\n</string>
    <string name="google_logo">Google Logo</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="login">login\n</string>
    <string name="Login">Login</string>
    <string name="didn_t_have_an_account_register_now">Didn\'t have an account? Register Now</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="client">Client</string>
    <string name="freelancer">Freelancer</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="countryCode">+880</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>