<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginActivity"
    android:background="#F9FAFB">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SnapTask"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressBar"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/Login"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerNow"
android:layout_marginBottom="20dp"
        android:text="@string/didn_t_have_an_account_register_now"/>

    <LinearLayout
        android:id="@+id/googleSignInBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
       android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/facebookSignInBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in with Facebook"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

</LinearLayout>