<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whisperWhite"
    tools:context=".RegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center">
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            >-->

<!--            <ImageView-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:src="@drawable/logo"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"/>-->



<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="SnapTask"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Sign Up"
            android:layout_marginTop="30dp"/>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/full_name"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--        Email Field-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/Email"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countryCode"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/charcoalBlack"/>
            <!--        Email Field-->
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="Phone"
                app:boxStrokeColor="@color/black"
                android:layout_marginStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--        Password Field-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--        Confirm Password Field-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="Confirm Password"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Role Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up as:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                app:cornerRadius="10dp"
                android:text="Client"
                style="@style/Widget.Material3.Button.OutlinedButton" />

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFreelancer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                app:cornerRadius="10dp"
                android:text="Freelancer"
                style="@style/Widget.Material3.Button.OutlinedButton" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="SIGN UP"
                android:textSize="18sp"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="@color/black"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>
    <!--u1:chengduf7-->
</ScrollView>